# dragonfly-logging-config

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer-lock.json
.github/: dependabot.yaml
.github/workflows/: dependency-review.yaml  lint-test.yaml  publish-to-pypi.yaml  python-pypi-publish.yaml
src/: tests.py
src/logging-config/: middleware.py
src/logging_config/: __init__.py  middleware.py
tests/: test_logging.py
