[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dragonfly-logging-config"
version = "2.1.0"
description = "Shared logging configuration for Dragonfly codebases."
authors = [{name = "Vipyr Security Developers", email = "support@vipyrsec.com"}]
readme = "README.md"
license = {text = "MIT"}

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Logging",
  "Typing :: Typed",
]

requires-python = ">=3.13,<3.14"
dependencies = ["asgi-correlation-id>=4.3.4", "fastapi-slim>=0.115.5", "structlog>=24.4.0"]

  [project.urls]
  homepage = "https://vipyrsec.com/"
  source = "https://github.com/vipyrsec/dragonfly-logging-config.git"
  issues = "https://github.com/vipyrsec/dragonfly-logging-config/issues"

[dependency-groups]
dev = ["pre-commit", "pyright", "ruff"]
test = ["coverage", "pytest"]

[tool.uv]
default-groups = ["dev", "test"]

[tool.hatch.build.targets.wheel]
packages = ["src/logging_config"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 120
target-version = "py312"

  [tool.ruff.lint]
  select = ["ALL"]

  ignore = [
    "FIX",   # https://docs.astral.sh/ruff/rules/#flake8-fixme-fix
    "G004",  # https://docs.astral.sh/ruff/rules/#flake8-logging-log
    "N818",  # https://docs.astral.sh/ruff/rules/error-suffix-on-exception-name/
    "S101",  # https://docs.astral.sh/ruff/rules/assert/
    "TC001", # https://docs.astral.sh/ruff/rules/typing-only-first-party-import/
    "TC002", # https://docs.astral.sh/ruff/rules/typing-only-third-party-import/
    "TC003", # https://docs.astral.sh/ruff/rules/typing-only-standard-library-import/
    "TD002", # https://docs.astral.sh/ruff/rules/missing-todo-author/
    "TD003", # https://docs.astral.sh/ruff/rules/missing-todo-link/

    # Conflicting rules with format (https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules)
    "COM812",
    "COM819",
    "D206",
    "D300",
    "E111",
    "E114",
    "E117",
    "ISC001",
    "ISC002",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "W191",
  ]

    [tool.ruff.lint.isort]
    known-first-party = ["logging_config"]

    [tool.ruff.lint.per-file-ignores]
    "tests/*" = [
      "ANN",
      "D",
      "INP",
      "PLR2004", # https://docs.astral.sh/ruff/rules/magic-value-comparison/
      "S105",    # https://docs.astral.sh/ruff/rules/hardcoded-password-string/
      "S106",    # https://docs.astral.sh/ruff/rules/hardcoded-password-func-arg/
      "S107",    # https://docs.astral.sh/ruff/rules/hardcoded-password-default/
    ]

    [tool.ruff.lint.pydocstyle]
    convention = "google"

[tool.pyright]
venvPath = "."
venv = ".venv"

typeCheckingMode = "strict"
# deprecateTypingAliases = true
# reportCallInDefaultInitializer = "error"
# reportImplicitOverride = "error"
# reportImplicitStringConcatenation = "error"
# reportImportCycles = "error"
# reportMissingSuperCall = "error"
# reportPropertyTypeMismatch = "error"
# reportShadowedImports = "error"
# reportUninitializedInstanceVariable = "error"
# reportUnnecessaryTypeIgnoreComment = "error"
# reportUnusedCallResult = "error"

[tool.coverage.run]
branch = false
source = ["src/logging_config/"]

[tool.coverage.report]
fail_under = 100
